[package]
name = "heartbeat-server"
version = "0.1.0"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/Ondolin/heartbeat/tree/master"
description = "A simple heartbeat implementation that reports to telegram"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
pling = { version = "0.2.0", features = ["http-sync"] }
dotenv = "0.15.0"
